crates/sui-adapter-transactional-tests/tests/programmable/split_coins_invalid.exp
processed 12 tasks

init:
A: object(0,0), B: object(0,1), C: object(0,2)

task 1 'publish'. lines 9-26:
Error: warning[W02021]: duplicate alias
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.gKPRoFNgiS/.tmp2QtMYD:11:14
   │
11 │     use std::vector;
   │              ^^^^^^ Unnecessary alias 'vector' for module 'std::vector'. This alias is provided by default
   │
   = This warning can be suppressed with '#[allow(duplicate_alias)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W02021]: duplicate alias
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.gKPRoFNgiS/.tmp2QtMYD:13:14
   │
13 │     use sui::transfer;
   │              ^^^^^^^^ Unnecessary alias 'transfer' for module 'sui::transfer'. This alias is provided by default
   │
   = This warning can be suppressed with '#[allow(duplicate_alias)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E04024]: invalid usage of immutable variable
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.gKPRoFNgiS/.tmp2QtMYD:19:38
   │
17 │     public fun transfer(v: vector<coin::Coin<sui::bfc::BFC>>, r: address) {
   │                         - To use the variable mutably, it must be declared 'mut', e.g. 'mut v'
18 │         while (!vector::is_empty(&v)) {
19 │             let c = vector::pop_back(&mut v);
   │                                      ^^^^^^ Invalid mutable borrow of immutable variable 'v'



task 2 'programmable'. lines 28-32:
created: object(1,0)
mutated: object(0,0)
gas summary: computation_cost: 1000000, storage_cost: 261440,  storage_rebate: 0, non_refundable_storage_fee: 0

task 3 'run'. lines 33-33:
Error: INVALID TEST. Unknown object, object(2,0)

task 4 'view-object'. lines 35-37:
Error: task 4, lines 35-35. Unbound fake id 3,0

task 5 'programmable'. lines 38-41:
Error: INVALID TEST. Unknown object, object(3,0)

task 6 'programmable'. lines 42-45:
Error: INVALID TEST. Unknown object, object(3,0)

task 7 'programmable'. lines 46-49:
Error: INVALID TEST. Unknown object, object(3,0)

task 8 'programmable'. lines 50-53:
Error: INVALID TEST. Unknown object, object(3,0)

task 9 'programmable'. lines 54-58:
Error: INVALID TEST. Unknown object, object(3,0)

task 10 'programmable'. lines 59-64:
Error: INVALID TEST. Unknown object, object(3,0)

task 11 'programmable'. lines 65-67:
Error: INVALID TEST. Unknown object, object(3,0)
